MacViews: Use bullets for displaying obscured text.

BUG=657562
TEST=Enable chrome://flags/#mac-views-webui-dialogs. Go to an http auth dialog.
Verify bullets are used for displaying obscured text on Mac.

Review-Url: https://codereview.chromium.org/2439693002
Cr-Commit-Position: refs/heads/master@{#427540}

Former-commit-id: d7ca7598545ba71a7d7297675b889d7d96b54a0d